--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,10 +6,18 @@ jobs:
   first-job: 
     runs-on: ubuntu-latest
     steps:
-      - name: Print Hello
-        run: echo "hello"
-      - name: Print ByeBye
-        run: echo "bye bye"
-
+      - name: Get Code 
+        uses: actions/checkout@v5
+      - name: "Set up Python"
+        uses: actions/setup-python@v6
+        with:
+          python-version-file: ".python-version"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      - name: run Python file
+        run: uv run main.py
+        
 
 
