--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,12 +16,20 @@ jobs:
         uses: astral-sh/setup-uv@v6
       - name: Install the project
         run: uv sync --locked --all-extras --dev
-      - name: run Python file
+      - name: Cache
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/cache/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
+      - name: Add env file
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          USER_NAME: ${{ secrets.USER_NAME }}
         run: uv run main.py
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          author_name: Your Name
-          author_email: mail@example.com
-          message: 'Your commit message'
-          add: "main.py README.md"
+          author_name: Serhat Karaman
+          author_email: serhatkaramanworkmail@gmail.com
+          message: 'Updated profile Readme'
+          add: '.'
